@@ -1,3 +1,7 @@
+drkns 04.10.2016 09:47:59 +0200 - build 4806
+
+1. Уточнение 4794 & 4805.
+
 drkns 03.10.2016 21:28:23 +0200 - build 4805
 
 1. 0003318: "Message not found" errors when opening F9 > Options > Colors
